# PointCloudProcessing

./: CMakeLists.txt  README.md
cmake/: Findcereal.cmake  Findkinectlibraries.cmake  Findlibfreenect.cmake  Findpcl.cmake  automake_safeguards.cmake  cereal.txt.in  eigen.txt.in  flann.txt.in  kinectlibraries.txt.in  pcl.txt.in
docs/: Doxyfile.in
src/: CMakeLists.txt
src/PointCloudProcessing/: CMakeLists.txt  PointCloudProcessing.cpp
src/PointCloudProcessingBackend/: CMakeLists.txt  PointCloudProcessingBackend.cpp
src/PointCloudProcessingFrontend/: CMakeLists.txt
src/PointCloudProcessingFrontend/Widgets/Logger/: CMakeLists.txt  logger.cpp  logger.h  logger.ui
src/PointCloudProcessingFrontend/Widgets/Ponnector/: CMakeLists.txt  main.cpp  ponnector.cpp  ponnector.h  ponnector.ui  ponnector_settings.cpp  ponnector_settings.h  ponnector_settings.ui
src/PointCloudProcessingObject/: CMakeLists.txt  PointCloudProcessingObject.cpp
src/include/: PointCloudProcessing.h  PointCloudProcessingBackend.h  PointCloudProcessingObject.h
